test/scenarios/generate.yaml
# file path relative to project root
input:
  policy: examples/generate/policy_basic.yaml
  resource: examples/generate/namespace.yaml
  load_resources:
    - examples/generate/configMap_default.yaml
expected:
  generation:
    resources:
      - test/output/cm_default_config.yaml
      - test/output/sc_mongo_cred.yaml
---
input:
  policy: examples/generate/policy_generate.yaml
  resource: examples/generate/namespace.yaml
  load_resources:
    - examples/generate/configMap.yaml
expected:
  generation:
    resources:
      - test/output/cm_copied_cm.yaml
      - test/output/cm_zk-kafka-address.yaml
---
input:
  policy: examples/generate/policy_networkPolicy.yaml
  resource: examples/generate/namespace.yaml
expected:
  generation:
    resources:
      - test/output/np_deny-all-traffic.yaml
