test/scenarios/policy_mutate_imagePullPolicy.yaml
apiVersion : kyverno.io/v1alpha1
kind: ClusterPolicy
metadata:
  name: image-pull-policy
spec:
  rules:
  - name: image-pull-policy
    match:
      resources:
        kinds:
        - Deployment
        selector:
          matchLabels:
            app : nginxlatest
    exclude:
      resources:
        kinds:
        - DaemonSet
    mutate:
      overlay:
        spec:
          template:
            spec:
              containers:
              # select images which end with :latest
              - (image): "*latest"
                # require that the imagePullPolicy is "IfNotPresent"  
                imagePullPolicy: IfNotPresent
